@@ -320,7 +320,7 @@
     <Compile Include="Registration\Parameter.cs" />
     <Compile Include="Registration\CustomDependencyDescriptor.cs" />
     <Compile Include="Registration\ExtendedPropertiesDescriptor.cs" />
-    <Compile Include="Registration\IComponentRegistration.cs" />
+    <Compile Include="Registration\IRegistration.cs" />
     <Compile Include="Registration\Interceptor\InterceptorDescriptor.cs" />
     <Compile Include="Registration\Interceptor\InterceptorGroup.cs" />
     <Compile Include="Registration\Lifestyle\Custom.cs" />
